# asherah-node

./: .asherah-version  .editorconfig  .eslintrc.js  .gitignore  .tool-versions  BREAKTHROUGH_DISCOVERY.md  BUN_CGO_COMPLETE_SOLUTION.md  BUN_CGO_FIX_SUMMARY.md  BUN_IMPLEMENTATION_COMPLETE.md  BUN_WARMUP_PROPOSAL.md  CGO_BUN_FINAL_ANALYSIS.md  CGO_BUN_SOLUTION.md  CMakeLists.txt  CONTRIBUTING.md  END_USER_SOLUTIONS.md  FINAL_BUN_CGO_ANALYSIS.md  GO_MODULE_FIX_SUMMARY.md  GO_WARMUP_INTEGRATION.md  README.md  REMAINING_ISSUES_REPORT.md  SHA256SUMS  SHA256SUMS-darwin  SIGNAL_MASK_FIX_COMPLETE.md  STACK_SIZE_FIX_SUMMARY.md  UPDATED_ANALYSIS.md  asherah-bun-wrapper.js  benchmark-ffi-overhead.js  benchmark-node-startup.js  benchmark-ultimate-optimization.js  binding.gyp  bun-env.txt  bun-go-runtime-init.js  bun-runtime-analysis.txt  bun-signal-info.txt  cgo_bun_shim.c  cgo_preload.c  cgo_preload.dylib  debug-hang.sh  download-libasherah.sh  eslint.config.mjs  (+183 more)
.github/workflows/: build.yml  publish.yml  test.yml
asherah-bun-preload/: README.md  index.js
asherah-bun-preload/lib/: bun_warmup_minimal.dylib  bun_warmup_minimal.go  noop_warmup.c
benchmarks/: benchmarks.ts
bun-go-runtime-init/: README.md  index.js  package.json
examples/docker/: Dockerfile  build.sh  index.js  package-lock.json  package.json
integration/: test-db-hostname.patch
integration/features/: decrypt.feature
integration/node/: package-lock.json  package.json  run-encrypt.sh  run-local.sh
integration/node/features/support/: decrypt.js  encrypt.js
scripts/: benchmark.sh  build-bun-preload.sh  build.sh  clean-bun-preload.sh  coverage.sh  download-binaries.sh  download-libasherah.sh  download-libraries.sh  dumpster-fire-dynamodb.js  dumpster-fire-memory.js  dumpster-fire.js  integration-test.sh  local-integration-test.sh  runs-on-emulated.sh  set-version.sh  setup-multiarch.sh  test-arch.sh  update-sums.sh  verify-tag.sh
src/: asherah.cc  asherah.d.ts  asherah.h  asherah.ts  asherah_async_worker.h  bun_warmup.go  bun_warmup.h  bun_warmup.js  cobhan.cc  cobhan.h  cobhan_buffer.h  cobhan_buffer_napi.h  cobhan_napi_interop.cc  cobhan_napi_interop.h  hints.h  index.js  index.ts  logging.cc  logging.h  logging_napi.cc  logging_napi.h  logging_stderr.cc  logging_stderr.h  napi_utils.h  napiasherah.cc  scoped_allocate.h
sums/: SHA256SUMS-darwin
test/: asherah-behavior.spec.ts  asherah.spec.ts  asherah.ts  bun-test.js  helpers.ts  tsconfig.json
test/integration/: bun-compatibility.spec.js
